--- a/Experiments/html/get-a-quote-widget-scoped/index.html
+++ b/Experiments/html/get-a-quote-widget-scoped/index.html
@@ -138,11 +138,31 @@
             <input type="hidden" name="year" value="${VEHICLE.year}" />
             <input type="hidden" name="make" value="${VEHICLE.make}" />
             <input type="hidden" name="model" value="${VEHICLE.model}" />
-            <button>Calculate</button>
+            <button id="calculate-button">
+              <span>Calculate</span>
+              <span>
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="currentColor"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="lucide lucide-loader-circle"
+                >
+                  <path d="M21 12a9 9 0 1 1-6.219-8.56" />
+                </svg>
+                Calculating
+              </span>
+            </button>
           </form>
         </div>
       </div>
     </div>
+
     <script src="script.js" type="module"></script>
   </body>
 </html>
